--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.24",
     "postcss": "^8",
+    "prettier-plugin-tailwindcss": "^0.6.13",
     "tailwindcss": "^3.4.1"
   }
 }
